# tympani

./: configure.ac  test.c
src/: AveragingSlidingWindow.cc  AveragingSlidingWindow.h  CorrelationsFile.cc  CorrelationsFile.h  CorrelationsScreenGenerator.cc  CorrelationsScreenGenerator.h  Makefile.am  SlidingWindow.cc  SlidingWindow.h  displaced_sound.cc  test.c  tymp-corr.cc  tymp-devices.cc  tymp-id.c
